--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".activity.MainActivity">
 
     <include
+        android:id="@+id/toolbarMain"
         layout="@layout/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
