--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_20">#33000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue_pallete">#001E6C</color>
     <color name="blue_pallete">#035397</color>
