Playing youtube videos in AppActivity

--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -34,8 +34,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonDownload"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarApp">
+        app:layout_constraintTop_toBottomOf="@+id/toolbarApp"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -59,12 +61,35 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
+                android:justificationMode="inter_word"
                 android:text="@string/text_app_desc"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imagePrint"
-                android:justificationMode="inter_word"/>
+                app:layout_constraintTop_toBottomOf="@id/imagePrint" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/text_youtube_indication"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/textAppDesc"
+                app:layout_constraintTop_toBottomOf="@id/textAppDesc" />
+
+            <view
+                android:id="@+id/youtubeView"
+                class="com.google.android.youtube.player.YouTubePlayerView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/textAppDesc"
+                app:layout_constraintStart_toStartOf="@id/textAppDesc"
+                app:layout_constraintTop_toBottomOf="@id/textView" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
